Added connection to RDS db - uses .env to configure source

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=budget
+spring.datasource.url=${RDS_DB_URL}
+spring.datasource.username=${RDS_DB_USERNAME}
+spring.datasource.password=${RDS_DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
